# metpredict-website

./: .gitignore  CNAME  README.md  build.py  config.yaml  index.html  pyproject.toml
.github/workflows/: deploy.yml
assets/css/: style.css
contact/: index.html
content/: contact.yaml  index.yaml  news.yaml  publications.yaml  research.yaml  team.yaml  teams.yaml
docs/: CNAME
news/: index.html
news/37th-European-Society-of-Pathology/: index.html
news/eric-joins/: index.html
news/eva-enbdc-2026/: index.html
news/fatemeh-joins/: index.html
news/website-launched/: index.html
news/wwtf-funding-awarded/: index.html
publications/: index.html
research/: index.html
team/: index.html
templates/: _template.html  contact.html  index.html  news.html  news_post.html  publications.html  research.html  team.html  teams.html
