[project]
name = "metpredict-website"
version = "0.1.0"
description = "MetPredict website placeholder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.5",
    "pyyaml>=6.0",
]
keywords = ["website", "jinja", "yaml", "bootstrap"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://metpredict.at/" }
authors = [
    { name = "Andre Rendeiro", email = "arendeiro@cemm.oeaw.ac.at" },
]

[tool.taskipy.tasks]
clean = { cmd = "rm -r docs || true", help = "Remove the 'docs' directory" }
build = { cmd = "python build.py", help = "Run the build script" }
serve = { cmd = "(xdg-open http://0.0.0.0:8000/ &) && python -m http.server -d docs/", help = "Open browser and serve 'docs' directory" }